--- a/portal/templates/portal/payment/payment_reports.html
+++ b/portal/templates/portal/payment/payment_reports.html
@@ -22,7 +22,7 @@
 <br>
 
 <!-- Filter Cards -->
-<div class="row">
+<!-- <div class="row">
     <div class="col-12">
         <div class="card">
             <div class="card-body">
@@ -93,8 +93,8 @@
             </div>
         </div>
     </div>
-</div>
-<br>
+</div> -->
+<!-- <br> -->
 
 <!-- Stats Cards -->
 <div class="row">
