--- a/portal/templates/portal/equipment/equipment_overview.html
+++ b/portal/templates/portal/equipment/equipment_overview.html
@@ -22,7 +22,7 @@
 <br>
 
 <!-- Filter Cards -->
-<div class="row">
+<!-- <div class="row">
     <div class="col-12">
         <div class="card">
             <div class="card-body">
@@ -72,7 +72,7 @@
         </div>
     </div>
 </div>
-<br>
+<br> -->
 
 <!-- Stats Cards -->
 <div class="row">
