--- a/portal/templates/portal/Farms/assignment.html
+++ b/portal/templates/portal/Farms/assignment.html
@@ -95,10 +95,10 @@
                                     <th>Assignment ID</th>
                                     <th>Staff Name</th>
                                     <th>Staff ID</th>
-                                    <th>Farm Reference</th>
-                                    <th>Farmer Name</th>
-                                    <th>Region</th>
-                                    <th>District</th>
+                                    <th>Staff Contact</th>
+                                    <th>Project Name</th>
+                                    <th>Farm Count</th>
+                                    <th>Assignment ID</th>
                                     <th>Assigned Date</th>
                                     <th>Actions</th>
                                 </tr>
@@ -281,10 +281,10 @@
                 { data: 'assignment_id' },
                 { data: 'staff_name' },
                 { data: 'staff_id' },
-                { data: 'farm_reference' },
-                { data: 'farmer_name' },
-                { data: 'region' },
-                { data: 'district' },
+                { data: 'staff_contact' },
+                { data: 'project_name' },
+                { data: 'farm_count' },
+                { data: 'assignment_id' },
                 { data: 'assigned_date' },
                 {
                     data: 'id',
